--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -2,8 +2,10 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 282px;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
   overflow: hidden;
   border-radius: 10px;
 }
+
