--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -6,7 +6,7 @@
   height: calc((100vw - 320px) / (1280 - 320) * (32 - 20) + 20px);
   outline: none;
   border: none;
-  background: transparent url(../../../images/btn-close.svg) center center / cover no-repeat;
+  background: transparent url(../../../images/CloseIcon.svg) center center / cover no-repeat;
   transition: opacity 0.2s linear;
 }
 
