--- a/pages/index.css
+++ b/pages/index.css
@@ -10,10 +10,14 @@
 @import url(../blocks/page/pages.css);
 @import url(../blocks/page/__container/page__container.css);
 
+/* content */
+@import url(../blocks/content/content.css);
+
 /** profile **/
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-edit/profile__avatar-edit.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__job/profile__job.css);
