--- a/pages/index.css
+++ b/pages/index.css
@@ -49,3 +49,8 @@
 @import url(../blocks/popup/__viewer/popup__viewer.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__text/popup__text.css);
+@import url(../blocks/popup/__fieldset/popup__fieldset.css);
+@import url(../blocks/popup/__save-button/_disabled/popup__save-button_disabled.css);
+@import url(../blocks/popup/__input/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input/__input-error/_active/popup__input-error_active.css);
+
