Upd for 6 sprint
Upd for 6 sprint

--- a/blocks/popup/__input/__input-error/popup__input-error.css
+++ b/blocks/popup/__input/__input-error/popup__input-error.css
@@ -1,10 +1,12 @@
 .popup__input-error {
-    border-bottom-color: red;
-    
+  border-bottom-color: red;
 }
 
 span.popup__input-error {
-    color: red;
-    font-size: 12px;
-    transform: translateY(calc(100% + 3px));
+  color: red;
+  font-size: 12px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transform: translateY(calc(100% + 3px));
 }
