--- a/pages/index.css
+++ b/pages/index.css
@@ -53,4 +53,5 @@
 @import url(../blocks/popup/__save-button/_disabled/popup__save-button_disabled.css);
 @import url(../blocks/popup/__input/__input-error/popup__input-error.css);
 @import url(../blocks/popup/__input/__input-error/_active/popup__input-error_active.css);
+@import url(../blocks/popup/__input/__input-container/popup__input-container.css);
 
