--- a/blocks/popup/__input/__input-container/popup__input-container.css
+++ b/blocks/popup/__input/__input-container/popup__input-container.css
@@ -1,4 +1,7 @@
 .popup__input-container {
-  margin-bottom: 30px;
+  margin: 0  0 30px 0;
   position: relative;
+}
+.popup__input-container:last-of-type {
+  margin: 0;
 }
